[gd_scene load_steps=7 format=3 uid="uid://w4mpb648ecvi"]

[ext_resource type="Script" path="res://scripts/inventory/item_slot.gd" id="1_4y3u0"]
[ext_resource type="Texture2D" uid="uid://baqgunsnxs5ak" path="res://sprites/forest_/forest_ [resources].png" id="1_qh8l0"]
[ext_resource type="FontFile" uid="uid://7oxj3q56bud8" path="res://fonts/bitbybit_ [Font].ttf" id="2_y3npb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yp4kp"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_hef1a"]
atlas = ExtResource("1_qh8l0")
region = Rect2(144, 16, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_2685s"]
font = ExtResource("2_y3npb")
font_size = 4

[node name="ItemSlot" type="PanelContainer" node_paths=PackedStringArray("_texture", "_quantity_label")]
self_modulate = Color(0.65098, 0.490196, 0.356863, 1)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
focus_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yp4kp")
script = ExtResource("1_4y3u0")
_texture = NodePath("Texture")
_quantity_label = NodePath("Texture/Quantity")

[node name="Texture" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = SubResource("AtlasTexture_hef1a")

[node name="Quantity" type="Label" parent="Texture"]
visible = false
layout_mode = 2
offset_left = 8.0
offset_right = 18.0
offset_bottom = 5.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "x20"
label_settings = SubResource("LabelSettings_2685s")
horizontal_alignment = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
